<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutInicio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#92EEFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewResultado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_resultado"
            android:textColor="#880E4F"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.097" />

        <EditText
            android:id="@+id/editTextNumberA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number|numberDecimal"
            android:text="@string/text_numero_A"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.265"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextNumberB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number|numberDecimal"
            android:text="@string/text_numero_B"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.394" />

        <Button
            android:id="@+id/buttonSumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sumar"
            android:text="@string/btn_sumar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />

        <Button
            android:id="@+id/buttonRestar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="restar"
            android:text="@string/btn_restar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />

        <Button
            android:id="@+id/buttonMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="multiplicar"
            android:text="@string/btn_multiplicar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.613" />

        <Button
            android:id="@+id/buttonDividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dividir"
            android:text="@string/btn_dividir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>